# anytype_rs

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  EXAMPLES.md  README.md  config.example.toml  nushell-plugin.md
.claude/: settings.local.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: markdown-import-feature.md
anytype-cli/: Cargo.toml
anytype-cli/src/: config.rs  main.rs
anytype-cli/src/commands/: auth.rs  members.rs  mod.rs  search.rs  spaces.rs
anytype-core/: Cargo.toml
anytype-core/src/: client.rs  error.rs  lib.rs  types.rs
anytype-core/src/client/: auth.rs  lists.rs  members.rs  mod.rs  objects.rs  properties.rs  search.rs  spaces.rs  tags.rs  templates.rs  type_management.rs  types.rs
anytype-core/tests/: integration_tests.rs
api/: Cargo.toml
api/src/: lib.rs  types.rs
api/src/client/: auth.rs  members.rs  mod.rs  objects.rs  properties.rs  search.rs  tags.rs  templates.rs
api/tests/: integration_tests.rs
cli/: Cargo.toml
cli/src/: config.rs  main.rs
cli/src/commands/: auth.rs  members.rs  mod.rs  properties.rs  search.rs  spaces.rs  tags.rs  templates.rs  types.rs
core/: Cargo.toml
core/src/: lib.rs
core/tests/: integration_tests.rs
crates/anytype_rs/: Cargo.toml
crates/anytype_rs/src/api/: types.rs
crates/anytype_rs/src/api/client/: lists.rs  mod.rs  objects.rs  properties.rs  search.rs  spaces.rs  tags.rs  templates.rs  types.rs
crates/anytype_rs/src/cli/commands/: spaces.rs
crates/anytype_rs/src/tests/: integration_tests.rs
crates/anytype_rs/tests/: integration_tests.rs  mock_tests.rs  snapshot_tests.rs
crates/anytype_rs/tests/mock_tests/: auth_tests.rs  fixtures.rs  lists_tests.rs  members_tests.rs  objects_tests.rs  properties_tests.rs  search_tests.rs  spaces_tests.rs  tags_tests.rs  templates_tests.rs  types_tests.rs
crates/anytype_rs/tests/property_tests/: serialization.rs  strategies.rs  validation.rs
crates/anytype_rs/tests/snapshot_tests/: objects.rs  properties.rs  templates.rs
crates/anytype_rs/tests/snapshot_tests/snapshots/: snapshot_tests__snapshots__errors__error_api_debug.snap  snapshot_tests__snapshots__errors__error_auth.snap  snapshot_tests__snapshots__errors__error_auth_debug.snap  snapshot_tests__snapshots__errors__error_invalid_response.snap  snapshot_tests__snapshots__lists__list_view_data_full.snap  snapshot_tests__snapshots__lists__list_view_sort.snap  snapshot_tests__snapshots__members__member_full.snap  snapshot_tests__snapshots__members__member_role_editor.snap  snapshot_tests__snapshots__members__member_role_viewer.snap  snapshot_tests__snapshots__members__member_status_active.snap  snapshot_tests__snapshots__members__member_status_declined.snap  snapshot_tests__snapshots__members__member_status_joining.snap  snapshot_tests__snapshots__members__member_status_removed.snap  snapshot_tests__snapshots__members__member_status_removing.snap  snapshot_tests__snapshots__objects__create_object_request_full.snap  snapshot_tests__snapshots__objects__object_full.snap  snapshot_tests__snapshots__objects__object_minimal.snap  snapshot_tests__snapshots__objects__update_object_request_full.snap  snapshot_tests__snapshots__objects__update_object_request_name_only.snap  snapshot_tests__snapshots__properties__create_property_request_select.snap  snapshot_tests__snapshots__properties__create_property_request_text.snap  snapshot_tests__snapshots__properties__property_format_multi_select.snap  snapshot_tests__snapshots__properties__property_format_number.snap  snapshot_tests__snapshots__properties__property_format_objects.snap  snapshot_tests__snapshots__properties__property_format_phone.snap  snapshot_tests__snapshots__properties__property_format_text.snap  snapshot_tests__snapshots__properties__property_format_url.snap  snapshot_tests__snapshots__properties__property_text.snap  snapshot_tests__snapshots__properties__update_property_request.snap  snapshot_tests__snapshots__search__search_object_with_type.snap  snapshot_tests__snapshots__search__search_request_full.snap  snapshot_tests__snapshots__search__search_request_minimal.snap  snapshot_tests__snapshots__search__sort_direction_asc.snap  snapshot_tests__snapshots__search__sort_direction_desc.snap  snapshot_tests__snapshots__search__sort_property_last_modified_date.snap  snapshot_tests__snapshots__spaces__create_space_request_with_description.snap  snapshot_tests__snapshots__spaces__space_minimal.snap  snapshot_tests__snapshots__spaces__update_space_request_description_only.snap  snapshot_tests__snapshots__spaces__update_space_request_empty.snap  snapshot_tests__snapshots__spaces__update_space_request_full.snap  (+30 more)
crates/nu_plugin_anytype/: ARCHITECTURE.md  Cargo.toml  TESTING.md  test_all_commands.nu
crates/nu_plugin_anytype/src/: error.rs  lib.rs  main.rs  plugin.rs  value.rs
crates/nu_plugin_anytype/src/cache/: mod.rs  resolver.rs
crates/nu_plugin_anytype/src/commands/: auth.rs  common.rs  import.rs  list.rs  member.rs  mod.rs  object.rs  property.rs  resolve.rs  search.rs  space.rs  tag.rs  template.rs  type.rs  types.rs
crates/nu_plugin_anytype/tests/: plugin_test.rs
docs/: .cleanup-status.md  HTTP_TRACING.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  MOCK_TEST_IMPLEMENTATION_STATUS.md  MOCK_TEST_PLAN.md  README.md  development.md  examples.md  nushell-plugin.md  roadmap.md  testing.md
docs/archive/: MOCK_TEST_IMPLEMENTATION_STATUS.md  README.md
nu_plugin_anytype/: .gitignore  ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_STATUS.md  MIGRATION_0.106.md  README.md  TESTING.md  test_all_commands.nu
nu_plugin_anytype/src/: error.rs  main.rs  plugin.rs  value.rs
nu_plugin_anytype/src/cache/: mod.rs  resolver.rs
nu_plugin_anytype/src/commands/: auth.rs  common.rs  member.rs  mod.rs  object.rs  property.rs  resolve.rs  search.rs  space.rs  tag.rs  template.rs  types.rs
nu_plugin_anytype/tests/: plugin_test.rs
src/: lib.rs
src/api/: error.rs  mod.rs  types.rs
src/cli/: main.rs
tests/: integration_tests.rs  property_tests.rs  snapshot_tests.rs
tests/snapshot_tests/: errors.rs  (+10 more)
(+85 files in other folders)
