[package]
name = "anytype_rs"
version = "0.0.1"
authors=["Lane Sawyer <github@lanesawyer.dev>"]
description = "A Rust client library and CLI for the Anytype API"
repository = "https://github.com/lanesawyer/anytype_rs"
edition = "2024"
license = "GPL-3.0"
keywords = ["anytype", "api", "client", "cli"]
categories = ["api-bindings", "command-line-interface"]
readme = "README.md"

[[bin]]
name = "anytype"
path = "src/cli/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.23", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[lib]
name = "anytype_rs"
path = "src/lib.rs"
