[package]
name = "anytype_rs"
version = "0.0.3"
authors=["Lane Sawyer <github@lanesawyer.dev>"]
description = "A Rust client library and CLI for the Anytype API"
repository = "https://github.com/lanesawyer/anytype_rs"
edition = "2024"
license = "GPL-3.0"
keywords = ["anytype", "api", "client", "cli"]
categories = ["api-bindings", "command-line-interface"]
readme = "README.md"

[[bin]]
name = "anytype"
path = "src/cli/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.23", features = ["derive"] }
dirs = "6.0.0"
gray_matter = "0.2.8"
reqwest = { version = "0.12.21", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
insta = { version = "1.34", features = ["json"] }
proptest = "1.4"

[lib]
name = "anytype_rs"
path = "src/lib.rs"
