[workspace]
resolver = "2"
members = [
    "crates/anytype_rs",
    "crates/nu_plugin_anytype",
]

[workspace.package]
version = "0.0.3"
authors = ["Lane Sawyer <github@lanesawyer.dev>", "Mark Watts <18381+mwatts@users.noreply.github.com>"]
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/mwatts/anytype_rs"

[workspace.dependencies]
# Shared dependencies across workspace members
anyhow = "1.0.100"
anytype_rs = { path = "crates/anytype_rs" }
clap = { version = "4.5.23", features = ["derive"] }
dashmap = "6.1"
dirs = "6.0.0"
gray_matter = "0.2.8"
nu-plugin = "0.106.1"
nu-plugin-test-support = "0.106.1"
nu-protocol = "0.106.1"
proptest = "1.4"
insta = { version = "1.34", features = ["json"] }
reqwest = { version = "0.12.21", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
typetag = "0.2"
