[package]
name = "anytype-core"
version = "0.1.0"
edition = "2021"
description = "Core library for interacting with the Anytype API"
license = "MIT"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
