[package]
name = "api"
version = "0.1.0"
edition = "2024"
description = "Core library for interacting with the Anytype API"
license = "MIT"

[dependencies]
tokio = { workspace = true }
reqwest = { version = "0.12.20", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0.12"
tracing = { workspace = true }
