[package]
name = "cli"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for the Anytype API"

[[bin]]
name = "anytype"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde_json = { workspace = true }
dirs = "6.0"
