[package]
name = "anytype_rs"
version.workspace = true
authors.workspace = true
description = "A Rust client library for the Anytype API"
repository.workspace = true
edition.workspace = true
license.workspace = true
keywords = ["anytype", "api", "client"]
categories = ["api-bindings"]
readme = "../../README.md"

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
httpmock = "0.8"
insta.workspace = true
proptest.workspace = true
tokio = { workspace = true, features = ["macros"] }

[lib]
name = "anytype_rs"
path = "src/lib.rs"
